--- a/src/Pages/PastChallenges.css
+++ b/src/Pages/PastChallenges.css
@@ -1,11 +1,13 @@
+
+
 .past_cont {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
     width: 100%;
-    padding: 20px;
+    overflow: hidden;
+    /* padding: 20px; */
 }
  
 .past_cont h1 {
@@ -122,6 +124,12 @@
   }
   .a-courses_item:nth-child(6n) .a-courses-item_bg {
     background-color: #4c49ea;
+  }
+  @media (max-width:480px)  {
+    .a-courses_item {
+      width: 80%;
+      margin: 0 0 30px;
+    }
   }
   
   
